# multi-parrot

./: .gitignore  README.md
multi_parrot_blue/: CMakeLists.txt
multi_parrot_blue/src/: audio_player.py  blue_audio_player.py  blue_parrot.py  blue_serial_handler.py  parrot.py  serial_handler.py
multi_parrot_blue/startup/: ROS_param.sh  blue_env.sh  startup_blue.sh
multi_parrot_red/: CMakeLists.txt  package.xml
multi_parrot_red/launch/: red_parrot.launch
multi_parrot_red/src/: red_audio_player.py  red_parrot.py  red_serial_handler.py  serial_handler.py
multi_parrot_red/startup/: ROS_param.sh  red_env.sh  startup_red.sh
multi_parrot_web/: .gitignore  requirements.txt  setip.py
multi_parrot_web/parrot/: settings.py  urls.py  wsgi.py
multi_parrot_web/parrot_control/: admin.py  models.py  parrot_gateway.py  ros.py  serializers.py  urls.py  views.py
multi_parrot_web/startup/: ROS_param.sh  main.launch  master_env.sh  multi_parrot_startup.sh  startup.sh
red_parrot/audio-player/: CMakeLists.txt  package.xml
red_parrot/audio-player/launch/: parrot_env.launch
red_parrot/audio-player/msg/: audio.msg
red_parrot/audio-player/src/: audio_player.py
red_parrot/commute/: package.xml
red_parrot/commute/scripts/: communication.py
server_side/commute/: CMakeLists.txt
server_side/commute/scripts/: commander.py
